--- a/css/general.css
+++ b/css/general.css
@@ -3,7 +3,8 @@
 /**********************************************/
 body {
   font-family: 'Proxima Nova', sans-serif;
-  font-size: 100%/13px; }
+  font-size: 100%/13px;
+  color: #4C4B50; }
 
 ul, li {
   list-style: none;
@@ -57,15 +58,15 @@ ul, li {
   font-style: normal; }
 
 @font-face {
-  font-family: 'proxima_nova_ltsemibold';
-  src: url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.eot");
-  src: url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.woff2") format("woff2"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.woff") format("woff"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.ttf") format("truetype"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.svg#proxima_nova_ltsemibold") format("svg");
+  font-family: 'proxima_nova_ltthin';
+  src: url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.eot");
+  src: url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.woff2") format("woff2"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.woff") format("woff"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.ttf") format("truetype"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.svg#proxima_nova_ltthin") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: 'proxima_nova_ltthin';
-  src: url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.eot");
-  src: url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.woff2") format("woff2"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.woff") format("woff"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.ttf") format("truetype"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Thin-webfont.svg#proxima_nova_ltthin") format("svg");
+  font-family: 'proxima_nova_ltsemibold';
+  src: url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.eot");
+  src: url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.woff2") format("woff2"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.woff") format("woff"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.ttf") format("truetype"), url("../fonts/proximanova/Mark Simonson - Proxima Nova Semibold-webfont.svg#proxima_nova_ltsemibold") format("svg");
   font-weight: normal;
   font-style: normal; }
