--- a/sass/general.scss
+++ b/sass/general.scss
@@ -30,6 +30,26 @@ ul, li{
     text-align: left;
 }
 
+.xs-font{
+    font-size:12px;
+}
+.s-font{
+    font-size:25px;
+}
+.xm-font{
+
+    font-size:30px;
+}
+.m-font{
+    font-size:36px;
+}
+.l-font{
+    font-size:45px;
+}
+.xl-font{
+    font-size:58px;
+}
+
 
 /**********************************************/
 /* FONTS                                      */
