--- a/css/general.css
+++ b/css/general.css
@@ -25,6 +25,24 @@ ul, li {
 .align-l {
   text-align: left; }
 
+.xs-font {
+  font-size: 12px; }
+
+.s-font {
+  font-size: 25px; }
+
+.xm-font {
+  font-size: 30px; }
+
+.m-font {
+  font-size: 36px; }
+
+.l-font {
+  font-size: 45px; }
+
+.xl-font {
+  font-size: 58px; }
+
 /**********************************************/
 /* FONTS                                      */
 /**********************************************/
