--- a/css/header.css
+++ b/css/header.css
@@ -12,10 +12,16 @@
   display: block;
   width: 160px;
   height: 100%;
-  text-align: center;
-  padding: 37px 0; }
+  text-align: center; }
   .main-header .logo h1 {
     font-size: 25px; }
+    .main-header .logo h1 a {
+      display: block;
+      padding: 31px 25px; }
+      .main-header .logo h1 a span {
+        display: none; }
+      .main-header .logo h1 a img {
+        width: 100%; }
 
 /***********************************************/
 .md-brand-head {
