--- a/sass/general.scss
+++ b/sass/general.scss
@@ -20,7 +20,16 @@ ul, li{
     width: 150px;
     text-align: center;
     font-weight: bold;
+    margin: 30px auto 10px;
+    font-size: 15px;
+    i{
+        font-size: 32px;
+        position: relative;
+        top: 6px;
+        margin-right: 10px;
+    }
 }
+
 
 .align-r{
     text-align: right;
@@ -30,8 +39,11 @@ ul, li{
     text-align: left;
 }
 
-.xs-font{
+.xxs-font{
     font-size:12px;
+}
+.xs-font{
+    font-size:19px;
 }
 .s-font{
     font-size:25px;
