--- a/sass/home.scss
+++ b/sass/home.scss
@@ -171,15 +171,22 @@
     margin: 0;
     border: 0;
     float: left;
-    min-height: 301px;
+    height: 300px;
     .title{
         display: block;
         text-align: center;
         font-size:15px;
         font-family:'Proxima Nova', sans-serif;
     }
+    .top{
+        padding-bottom: 20px;
+    }
     .btm{
+        padding: 20px 20px 0 20px;
         border-top: 1px solid #D2DEDE;
+    }
+    .fot{
+        padding-top: 20px;
     }
 }
 
@@ -188,6 +195,20 @@
     width: 40%;
     background-color: #E1F0ED;
     .top{
+        overflow: hidden;
+        .f-left{
+            .title{
+                text-align: left;
+            }
+            text-align:left;
+            float: left;
+            width: 30%;
+        }
+        .f-right{
+          text-align: right;
+          float: left;
+          width: 70%;
+        }
         p{
 
         }
@@ -199,6 +220,7 @@
         }
     }
     .btm{
+        padding-top: 0px;
         border-top: 1px solid #D2DEDE;
         overflow: hidden;
         .md-block-data{
@@ -222,6 +244,24 @@
             }
         }
     }
+    .fot{
+
+    }
+}
+
+.more-info{
+  margin: auto;
+  text-align: center;
+  a{
+    display:block;
+    color: #1D1628;
+  }
+  i{
+    font-size: 22px;
+    position: relative;
+    margin-right: 7px;
+    top: 3px;
+  }
 }
 
 
@@ -230,6 +270,9 @@
     background-color: #DDE6ED;
     .md-block-data{
         text-align: center;
+        .title{
+            margin-bottom: 15px;
+        }
     }
 }
 
@@ -238,6 +281,12 @@
     background-color: #F4F6F8;
     .md-block-data{
         text-align: center;
+    }
+    .title{
+        margin-bottom: 30px;
+    }
+    .btm{
+        padding-top: 30px;
     }
 }
 
@@ -269,6 +318,141 @@
 .more-info{
     span{
         i{
+
+        }
+    }
+}
+
+/******************************************/
+/* CONTENT ENGAGEMENT                     */
+/******************************************/
+.md-content-engagement{
+      .hd{
+          h2{
+
+          }
+      }
+      .bd{
+          table{
+              width: 100%;
+              tr{
+                  &.line{
+                      td{
+                          border-bottom: 1px solid #eee;
+                      }
+                      &.last-child{
+                          td{
+                              border-bottom: 0;
+                          }
+                      }
+                  }
+                  th{
+                       padding: 0 10px;
+                      span{
+                          font-size: 11px;
+                          color:#ccc;
+                      }
+                  }
+                  td{
+                      padding: 0 10px;
+                      span{
+                          display: block;
+                          padding: 16px 0 14px;
+                          font-size: 18px;
+                          font-weight: bold;
+                      }
+                  }
+              }
+          }
+          .name{
+            font-size: 13px;
+            font-weight: bold;
+          }
+          .last{
+              font-size: 13px;
+              font-weight: bold;
+              color: #ccc;
+          }
+          .theader{
+              //padding-bottom: 15px;
+              th{
+                  padding-bottom: 10px;
+                  span{
+
+                  }
+              }
+          }
+          .color{
+              display: inline-block;
+              width: 16px;
+              height: 16px;
+              padding: 0;
+              position: relative;
+              top: 3px;
+              &.video{
+                  background-color: #E1F0ED;
+              }
+              &.portrait{
+                  background-color: #DDE6ED;
+              }
+              &.product{
+                  background-color: #DCCDCD;
+              }
+              &.extra{
+                  background-color: #D7C0C9;
+              }
+              &.closeup{
+                  background-color: #C4D6E3;
+              }
+          }
+          .c-and-e-ft-data{
+              h3{
+
+              }
+          }
+      }
+}
+
+
+/******************************************/
+/* USER GENERATED CONTENT                 */
+/******************************************/
+.c-and-e-ft-data{
+    margin-top: 25px;
+    h3{
+        margin-bottom: 15px;
+        font-weight: bold;
+        font-size: 14px;
+    }
+    .bd{
+        border: 1px solid #ccc;
+        padding: 20px 30px;
+        .col-1{
+            overflow: hidden;
+            span{
+                float: left;
+                font-size: 45px;
+            }
+            .right-col{
+                float: left;
+                span{
+                    font-size: 15px;
+                }
+                .progressbar{
+                    height: 10px;
+                    width: 100%;
+                    background-color: #ddd;
+                    .bar{
+                        background-color: red;
+                        height: 10px;
+                    }
+                }
+            }
+        }
+        .col-2{
+
+        }
+        .col-3{
 
         }
     }
