--- a/css/home.css
+++ b/css/home.css
@@ -111,6 +111,19 @@
   .post-items .data-alt table tr.alt {
     background-color: #F6F7F9; }
 
+/* GRIDS TABLES */
+.table-style tr td {
+  padding: 5px !important;
+  font-size: 13px;
+  font-family: "proxima_nova_ltsemibold";
+  width: 40%; }
+  .table-style tr td + td {
+    width: 60%;
+    font-family: 'proxima_nova_altbold'; }
+
+.table-style tr.alt {
+  background-color: #F6F7F9; }
+
 /***************************************************************/
 /* SEC AVG GROUP                                               */
 /***************************************************************/
@@ -250,22 +263,23 @@
 .md-content-engagement .bd .theader th {
   padding-bottom: 10px; }
 
-.md-content-engagement .bd .color {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  padding: 0;
+/* COLOR */
+.color {
+  display: inline-block !important;
+  width: 16px !important;
+  height: 16px !important;
+  padding: 0 !important;
   position: relative;
   top: 3px; }
-  .md-content-engagement .bd .color.video {
+  .color.video {
     background-color: #E1F0ED; }
-  .md-content-engagement .bd .color.portrait {
+  .color.portrait {
     background-color: #DDE6ED; }
-  .md-content-engagement .bd .color.product {
+  .color.product {
     background-color: #DCCDCD; }
-  .md-content-engagement .bd .color.extra {
+  .color.extra {
     background-color: #D7C0C9; }
-  .md-content-engagement .bd .color.closeup {
+  .color.closeup {
     background-color: #C4D6E3; }
 
 /******************************************/
@@ -296,3 +310,60 @@
           .c-and-e-ft-data .bd .col-1 .right-col .progressbar .bar {
             background-color: red;
             height: 10px; }
+
+/******************************************/
+/* MD TAB CONT ENDG                       */
+/******************************************/
+.md-tab-cont-endg {
+  overflow: hidden; }
+  .md-tab-cont-endg .body .table-style.first-col {
+    margin-top: 41px; }
+    .md-tab-cont-endg .body .table-style.first-col tr td {
+      padding: 7px 20px 8px !important; }
+  .md-tab-cont-endg .item {
+    float: left;
+    width: 20%; }
+    .md-tab-cont-endg .item .head {
+      height: 85px;
+      max-height: 85px;
+      position: relative;
+      text-align: center;
+      padding: 0 15px; }
+      .md-tab-cont-endg .item .head hr {
+        margin: 10px 90px; }
+      .md-tab-cont-endg .item .head h3 {
+        font-family: 'proxima_nova_ltsemibold';
+        line-height: 133%;
+        padding: 0 70px;
+        font-size: 19px;
+        margin-bottom: 5px; }
+      .md-tab-cont-endg .item .head span {
+        font-size: 12px;
+        color: #bbb; }
+      .md-tab-cont-endg .item .head i.ico {
+        position: absolute;
+        top: 0px;
+        right: 10px; }
+      .md-tab-cont-endg .item .head .other-info p {
+        font-size: 13px;
+        font-family: 'proxima_nova_ltsemibold'; }
+    .md-tab-cont-endg .item .color {
+      margin-right: 10px; }
+    .md-tab-cont-endg .item .grafica {
+      height: 135px;
+      max-height: 135px;
+      text-align: center;
+      margin-top: 20px;
+      margin-bottom: 20px; }
+    .md-tab-cont-endg .item.last .body {
+      border-right: 0px; }
+    .md-tab-cont-endg .item .body {
+      border-right: 1px solid #ddd; }
+      .md-tab-cont-endg .item .body table {
+        width: 100%; }
+        .md-tab-cont-endg .item .body table tr th {
+          padding: 0 10px 10px 10px;
+          font-size: 11px;
+          color: #ccc; }
+        .md-tab-cont-endg .item .body table tr td {
+          padding: 10px 20px !important; }
