--- a/css/modal.css
+++ b/css/modal.css
@@ -33,7 +33,7 @@
     background: #f6f7f9;
     padding: 20px;
     width: 100%;
-    height: 110px;
+    height: 138px;
     float: left; }
     .modal-content-left .modal-content-left-percent-colors .global-info-percent-colors {
       border-right: 1px solid #d4d5d7;
@@ -75,20 +75,77 @@
     font-size: 14px;
     text-transform: uppercase;
     text-align: left;
-    padding: 35px; }
+    padding: 25px 35px; }
   .modal-content-right .modal-content-right-box-data {
     letter-spacing: 1px; }
+    .modal-content-right .modal-content-right-box-data a {
+      border: 1px solid #dcdcdc;
+      text-decoration: none;
+      padding: 10px;
+      font-size: 10px;
+      border-radius: 5px; }
     .modal-content-right .modal-content-right-box-data .line-grey-bg,
     .modal-content-right .modal-content-right-box-data .line-transparent-bg {
       padding: 6px 35px;
       font-size: 12px; }
     .modal-content-right .modal-content-right-box-data .line-grey-bg {
       background: #f6f7f9; }
+    .modal-content-right .modal-content-right-box-data .line-transparent-bg {
+      overflow: hidden; }
+      .modal-content-right .modal-content-right-box-data .line-transparent-bg a {
+        float: right;
+        position: relative;
+        top: -5px; }
+      .modal-content-right .modal-content-right-box-data .line-transparent-bg.last .name-info {
+        clear: both;
+        display: block;
+        margin-bottom: 15px; }
+      .modal-content-right .modal-content-right-box-data .line-transparent-bg.last a {
+        float: left;
+        position: relative;
+        top: -5px;
+        margin: 0 5px 5px 0; }
     .modal-content-right .modal-content-right-box-data .return-info {
       float: right;
-      font-weight: bold; }
+      font-weight: bold;
+      text-align: right; }
+      .modal-content-right .modal-content-right-box-data .return-info span {
+        display: block;
+        white-space: pre;
+        font-size: 10px;
+        margin-top: 5px; }
+      .modal-content-right .modal-content-right-box-data .return-info .green-post {
+        background: #e0f0ed;
+        padding: 3px 7px;
+        border-radius: 10px;
+        white-space: initial;
+        display: inline; }
     .modal-content-right .modal-content-right-box-data .line-divider {
       margin: 12px 35px;
       height: 1px;
       background: #dcdcdc;
       display: block; }
+    .modal-content-right .modal-content-right-box-data .tooltip-question {
+      display: inline-block;
+      float: none !important;
+      padding: 3px;
+      position: relative !important;
+      top: 0px !important;
+      background: #4e4a59;
+      border-radius: 50%;
+      border: 0 !important;
+      width: 15px;
+      color: white;
+      text-align: center;
+      height: 15px; }
+    .modal-content-right .modal-content-right-box-data .tooltip .tooltip-inner {
+      width: auto;
+      padding: 3px 8px;
+      color: #fff;
+      text-align: center;
+      background-color: #4e4a59;
+      border-radius: 4px;
+      font-size: 10px;
+      padding: 10px 20px; }
+    .modal-content-right .modal-content-right-box-data .tooltip .tooltip-arrow {
+      display: none; }
