--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -46,7 +46,7 @@
 		background: #f6f7f9;
 		padding: 20px;
 		width: 100%;
-		height: 110px;
+		height: 138px;
 		float: left;
 		.global-info-percent-colors {
 			border-right: 1px solid #d4d5d7;
@@ -95,10 +95,18 @@
 		font-size: 14px;
 		text-transform: uppercase;
 		text-align: left;
-		padding: 35px;
+		padding: 25px 35px;
 	}
 	.modal-content-right-box-data {
 		letter-spacing: 1px;
+		a {
+	    	border: 1px solid #dcdcdc;
+		    text-decoration: none;
+		    padding: 10px;
+		    // float: right;
+		    font-size: 10px;
+		    border-radius: 5px;
+	    }
 		.line-grey-bg,
 		.line-transparent-bg {
 		    padding: 6px 35px;
@@ -107,15 +115,79 @@
 		.line-grey-bg {
 			background: #f6f7f9;
 		}
+		.line-transparent-bg {
+			overflow: hidden;
+			a {
+				float: right;
+				position: relative;
+				top: -5px;
+			}
+			&.last {
+				.name-info {
+					clear: both;
+					display: block;
+					margin-bottom: 15px;
+				}
+				a {
+					float: left;
+				    position: relative;
+				    top: -5px;
+				    margin: 0 5px 5px 0;
+				}
+			}
+		}
 		.return-info {
 	    	float: right;
 	    	font-weight: bold;
+	    	text-align: right;
+	    	span {
+	    		display: block;
+				white-space: pre;
+				font-size: 10px;
+    			margin-top: 5px;
+	    	}
+	    	.green-post {
+	    		background: #e0f0ed;
+			    padding: 3px 7px;
+			    border-radius: 10px;
+			    white-space: initial;
+			    display: inline;
+	    	}
 	    }
 	    .line-divider {
 	    	margin: 12px 35px;
 		    height: 1px;
 		    background: #dcdcdc;
 		    display: block;
+	    }
+	    .tooltip-question {
+	    	display: inline-block;
+		    float: none !important;
+		    padding: 3px;
+		    position: relative !important;
+		    top: 0px !important;
+		    background: #4e4a59;
+		    border-radius: 50%;
+		    border: 0 !important;
+		    width: 15px;
+		    color: white;
+		    text-align: center;
+		    height: 15px;
+	    }
+	    .tooltip {
+	    	.tooltip-inner {
+			    width: auto;
+			    padding: 3px 8px;
+			    color: #fff;
+			    text-align: center;
+			    background-color: #4e4a59;
+			    border-radius: 4px;
+			    font-size: 10px;
+			    padding: 10px 20px;
+			}
+			.tooltip-arrow {
+				display: none;
+			}
 	    }
 	}
 }
