--- a/css/home.css
+++ b/css/home.css
@@ -72,6 +72,17 @@
 /***************************************************************/
 /* POST ITEMS                                                  */
 /***************************************************************/
+.post-items .best-post {
+  text-align: center;
+  margin-bottom: 15px; }
+  .post-items .best-post h3 {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-family: "proxima_nova_ltsemibold"; }
+  .post-items .best-post p {
+    font-size: 12px;
+    color: #ccc; }
+
 .post-items .img {
   width: 100%;
   margin-bottom: 15px; }
@@ -341,6 +352,9 @@
             background-color: red;
             height: 10px; }
 
+/******************************************/
+/* MD COMPARE BRAND                       */
+/******************************************/
 /******************************************/
 /* MD TAB CONT ENDG                       */
 /******************************************/
