--- a/sass/home.scss
+++ b/sass/home.scss
@@ -97,6 +97,22 @@
 /* POST ITEMS                                                  */
 /***************************************************************/
 .post-items{
+    .best-post{
+        text-align: center;
+        margin-bottom: 15px;
+        h3{
+            margin-bottom: 10px;
+            font-size: 16px;
+            font-family: "proxima_nova_ltsemibold";
+        }
+        p{
+            font-size: 12px;
+            color: #ccc;
+        }
+        a{
+
+        }
+    }
     .img{
         width: 100%;
         margin-bottom: 15px;
@@ -522,6 +538,14 @@
         }
     }
 }
+
+/******************************************/
+/* MD COMPARE BRAND                       */
+/******************************************/
+
+.md-best-post{
+
+ }
 
 /******************************************/
 /* MD TAB CONT ENDG                       */
